# railtemp

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  backend_timings.py  functions_CNU.py  profiling.py  pyproject.toml  railtemp.py  tests.ipynb
.github/workflows/: build_wheels.yml  python-app.yml  release.yml  test.yml
example/: example.ipynb  example_fixed_area.ipynb
examples/: example.ipynb  example_fixed_area.ipynb  example_origina_CNU_area.ipynb
src/railtemp/: Montecarlo.py  ParameterValue.py  railtemp.py  utils.py
src/railtemp/sections/: UIC46E1.csv  UIC54.csv  UIC60.csv  UIC60E1A1.csv
src/railtemp_core/: Cargo.toml
src/railtemp_core/benches/: projection.rs
src/railtemp_core/src/: geometry.rs  lib.rs  profiles.rs  types.rs
tests/: test_Montecarlo.py  test_ParameterValue.py  test_railtemp.py  test_railtemp_random_rail_area.py
tests/artifacts/: input_data.csv  input_montecarlo.csv  input_montecarlo_with_trail_initial.csv  invalid_data.csv  invalid_montecarlo.csv  monte_carlo_result.json  results.csv  rust_output.csv  simulation_output.csv
