[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "railtemp"
version = "1.2.4"
authors = [
  { name="Ary Vinicius Nervis Frigeri", email="aryviniciusnf@gmail.com" },
]
description = "Package to simulate railway temperatures based on weather conditions"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "ipykernel",
  "ipython",
  "jupyter_client",
  "jupyter_core",
  "matplotlib",
  "matplotlib-inline",
  "numpy",
  "pandas",
  "scipy",
  "seaborn",
  "tzdata",
  "pysolar",
  "pytest",
  "ruff>=0.11.8",
  "pytest-cov>=6.1.1",
  "deepdiff>=8.5.0",
]


[project.urls]
Homepage = "https://github.com/aryvini/railtemp"

[tool.hatch.build]
exclude = ["tests/"]

[tool.hatch.build.targets.sdist]
include = ["src/railtemp/**","examples/"]

[tool.hatch.build.targets.wheel]
packages = ["src/railtemp","examples/"]

[tool.ruff]
line-length = 100
exclude = [
    "examples",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
upload_to_pypi = false
upload_to_release = true
changelog_file = "CHANGELOG.md"