[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "railtemp"
version = "1.3.0-dev.2"
authors = [
  { name="Ary Vinicius Nervis Frigeri", email="aryviniciusnf@gmail.com" },
]
description = "Package to simulate railway temperatures based on weather conditions"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "ipykernel",
  "ipython",
  "jupyter_client",
  "jupyter_core",
  "matplotlib",
  "matplotlib-inline",
  "numpy",
  "pandas",
  "scipy",
  "seaborn",
  "tzdata",
  "pysolar",
  "pytest",
  "ruff>=0.11.8",
  "pytest-cov>=6.1.1",
  "deepdiff>=8.5.0",
]


[project.urls]
Homepage = "https://github.com/aryvini/railtemp"

[tool.maturin]
# Mixed Python+Rust src-layout:
#   - Python package:  src/railtemp/
#   - Rust extension:  src/railtemp_core/  → compiled into railtemp._core
module-name = "railtemp._core"
features = ["pyo3/extension-module"]
python-source = "src"
manifest-path = "src/railtemp_core/Cargo.toml"

[tool.ruff]
line-length = 100
exclude = [
    "examples",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
upload_to_release = true
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]
